Moving resume formatting to distinct file

--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -1,33 +1,4 @@
-\documentclass[12pt]{article}
-
-\usepackage[letterpaper, margin=0.5in]{geometry}
-
-\usepackage{titlesec}
-\titleformat{\section}
-    {\large \bfseries}{\thesection}{}{}[{\titlerule[0.5pt]}]
-\titlespacing{\section}
-    {0pt}{0.7em}{0.5em}
-
-\usepackage{palatino}
-\newcommand{\setfont}{\fontfamily{ppl} \selectfont}
-
-\usepackage{enumitem}
-\renewcommand{\labelitemi}{--}
-\setlist[itemize]{noitemsep, topsep=0.2em, leftmargin=0.3in}
-
-\newcommand{\blockskip}{\vspace{0.7em}}
-
-\newcommand{\tabsize}{\hspace{5.2in}}
-
-\newenvironment{tab1}
-    {\bfseries \begin{tabbing} \tabsize \= \kill}{\end{tabbing}}
-
-\newenvironment{tab2}
-    {\begin{tabbing} \tabsize \= \kill}{\end{tabbing}}
-
-\setlength{\parindent}{0em}
-\setlength{\topsep}{0.1em}
-\setlength{\partopsep}{0em}
+\input{resume_preamble}
 
 
 \begin{document}
