Migrating content to resume_long.tex

--- a/assets/resume_long.tex
+++ b/assets/resume_long.tex
@@ -74,6 +74,24 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 
 \blockskip
 
+\begin{tab1} IM Flash Technologies \> Lehi, Utah \end{tab1}
+\begin{tab2} Process Software Intern \> Summer 2018 \end{tab2}
+\begin{itemize}
+    \item Wrote Perl scripts to improve the efficiency of manufacturing defect sourcing.
+    \item Improved existing software to reduce errors in process time estimation by 97 percent.
+\end{itemize}
+
+\blockskip
+
+\begin{tab1} IM Flash Technologies \> Lehi, Utah \end{tab1}
+\begin{tab2} Process Software Intern \> Summer 2017 \end{tab2}
+\begin{itemize}
+    \item Built a C++ computer vision application for detecting equipment malfunctions.
+\end{itemize}
+
+
+\section*{Teaching Experience}
+
 \begin{tab1} University of Utah School of Computing \> Salt Lake City, Utah \end{tab1}
 \begin{tab2} Teaching Assistant \> Fall 2017 \end{tab2}
 \begin{itemize}
@@ -83,12 +101,56 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 
 \blockskip
 
-\begin{tab1} IM Flash Technologies \> Lehi, Utah \end{tab1}
-\begin{tab2} Process Software Intern \> Summer 2017, Summer 2018 \end{tab2}
+\begin{tab1} University of Utah Physics \& Astronomy \> Salt Lake City, Utah \end{tab1}
+\begin{tab2} Teaching Assistant \> Fall 2016 - Spring 2017 \end{tab2}
 \begin{itemize}
-    \item Wrote Perl scripts to improve the efficiency of manufacturing defect sourcing.
-    \item Improved existing software to reduce errors in process time estimation by 97 percent.
-    \item Built a C++ computer vision application for detecting equipment malfunctions.
+    \item Fall course: Physics 2010 - General Physics I
+    \item Spring course: Physics 2020 - General Physics II
+    \item Responsible for leading twice-weekly discussions.
+\end{itemize}
+
+\blockskip
+
+\begin{tab1} University of Utah Physics \& Astronomy \> Salt Lake City, Utah \end{tab1}
+\begin{tab2} Private Tutor \> Summer 2015 - Spring 2016 \end{tab2}
+\begin{itemize}
+    \item Courses: College Algebra I, General Physics I \& II, Physics for Scientists I \& II, Introduction to Quantum Mechanics and Relativity
+    \item Tutored 2-3 students each semester.
+\end{itemize}
+
+
+\section*{Volunteer Experience}
+
+\begin{tab1} UW-Madison Student ACM Chapter (SACM) \> Madison, Wisconsin \end{tab1}
+\begin{tab2} Event Committee Officer \> Spring 2019 \end{tab2}
+\begin{itemize}
+    \item Responsible for planning and marketing CS student events.
+\end{itemize}
+
+\blockskip
+
+\begin{tab1} Lowell Elementary School \> Madison, Wisconsin \end{tab1}
+\begin{tab2} CS Club Leader \> Fall 2018 \end{tab2}
+\begin{itemize}
+    \item Coached 4\textsuperscript{th} and 5\textsuperscript{th} graders in Scratch programming and computational thinking.
+    \item Managed behavior and attention of a large group.
+\end{itemize}
+
+\blockskip
+
+\begin{tab1} Salt Lake Valley Science and Engineering Fair \> Salt Lake City, Utah \end{tab1}
+\begin{tab2} Elementary Division Judge \> Spring 2016, Spring 2017 \end{tab2}
+\begin{itemize}
+    \item Evaluated projects at a regional science fair for K-12 students.
+    \item Provided advice and mentorship throughout the evaluation process.
+\end{itemize}
+
+\blockskip
+
+\begin{tab1} University of Utah College of Science \> Salt Lake City, Utah \end{tab1}
+\begin{tab2} Science Day Volunteer \> Fall 2015, Fall 2016 \end{tab2}
+\begin{itemize}
+    \item Offered logistical support at an annual outreach event for high school students.
 \end{itemize}
 
 \end{document}
