--- a/assets/resume_long.tex
+++ b/assets/resume_long.tex
@@ -50,8 +50,8 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \begin{tab1} Esri \> Redlands, California \end{tab1}
 \begin{tab2} Map Exploration Software Intern \> Summer 2019 \end{tab2}
 \begin{itemize}
-    \item Creating tools for high-performance visibility analysis in ArcGIS Pro.
-    \item Leveraging machine learning for detecting objects in 3D urban scenes.
+    \item Created tools for high-performance visibility analysis in ArcGIS Pro.
+    \item Leveraged machine learning for detecting objects in 3D urban scenes.
 \end{itemize}
 
 \blockskip
