Updated resume and intro blurb

--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -39,7 +39,7 @@
 \section*{Coursework and Languages}
 
 \begin{tabular}{ @{} p{1.75in} p{5.5in} }
-Selected coursework & Machine learning, artificial intelligence, computer graphics, algorithms, scientific computing, linear algebra, statistics, differential equations \\
+Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, linear algebra, statistics, differential equations \\
 Most experience & C++, Python, Java, Rust \\
 Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \end{tabular}
@@ -47,7 +47,31 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 
 \section*{Work Experience}
 
+\begin{tab1} UW-Madison Computer Sciences \> Madison, Wisconsin \end{tab1}
+
+\begin{tab2} Graduate Research Assistant \> Spring 2020 - Present \end{tab2}
+\begin{itemize}
+    \item Advisor: Mohit Gupta
+    \item Developing techniques for interpreting data from single-photon visual sensors.
+    \item Exploring theory and applications of spiking neural networks.
+\end{itemize}
+
+\begin{tab2} Teaching Assistant \> Fall 2019 \end{tab2}
+\begin{itemize}
+    \item Course: CS 559 - Computer Graphics
+\end{itemize}
+
+\begin{tab2} Graduate Research Assistant \> Fall 2018 - Spring 2019 \end{tab2}
+\begin{itemize}
+    \item Advisors: Jignesh Patel, Kevin Eliceiri
+    \item Collaborator on Hustle, a scalable replacement for SQLite written in Rust.
+    \item Wrote a Java application to generate synthetic images of biological fiber networks.
+\end{itemize}
+
+\blockskip
+
 \begin{tab1} Esri \> Redlands, California \end{tab1}
+
 \begin{tab2} Map Exploration Software Intern \> Summer 2019 \end{tab2}
 \begin{itemize}
     \item Created tools for high-performance visibility analysis in ArcGIS Pro.
@@ -56,34 +80,8 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 
 \blockskip
 
-\begin{tab1} UW-Madison Computer Sciences \> Madison, Wisconsin \end{tab1}
-\begin{tab2} Graduate Research Assistant \> Fall 2018 - Spring 2019 \end{tab2}
-\begin{itemize}
-    \item Collaborator on Hustle, a scalable replacement for SQLite written in Rust.
-    \item Wrote a Java application to generate synthetic images of biological fiber networks.
-\end{itemize}
-
-\blockskip
-
-\begin{tab1} University of Utah Physics \& Astronomy \> Salt Lake City, Utah \end{tab1}
-\begin{tab2} Undergraduate Research Assistant \> Spring 2016 - Summer 2018 \end{tab2}
-\begin{itemize}
-    \item Conducted research on atmospheric cosmic ray detection techniques.
-    \item Operated the Telescope Array observatory in Delta, Utah.
-\end{itemize}
-
-\blockskip
-
-\begin{tab1} University of Utah School of Computing \> Salt Lake City, Utah \end{tab1}
-\begin{tab2} Teaching Assistant \> Fall 2017 \end{tab2}
-\begin{itemize}
-    \item Course: CS 2100 - Discrete Mathematics
-    \item Responsible for leading weekly discussions and creating homework solutions.
-\end{itemize}
-
-\blockskip
-
 \begin{tab1} IM Flash Technologies \> Lehi, Utah \end{tab1}
+
 \begin{tab2} Process Software Intern \> Summer 2016, Summer 2017 \end{tab2}
 \begin{itemize}
     \item Wrote Perl scripts to improve the efficiency of manufacturing defect sourcing.
