--- a/assets/resume_preamble.tex
+++ b/assets/resume_preamble.tex
@@ -23,7 +23,7 @@
     {\bfseries \begin{tabbing} \tabsize \= \kill}{\end{tabbing}}
 
 \newenvironment{tab2}
-    {\begin{tabbing} \tabsize \= \kill}{\end{tabbing}}
+    {\vspace{0.1em} \begin{tabbing} \tabsize \= \kill}{\end{tabbing}}
 
 \setlength{\parindent}{0em}
 \setlength{\topsep}{0.1em}
