Resume formatting changes

--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -18,8 +18,8 @@
 \section*{Education}
 
 \begin{tab1} University of Wisconsin-Madison \> Madison, Wisconsin \end{tab1}
-\begin{tab2} MS/PhD in Computer Science \> Fall 2018 - Present \end{tab2}
 
+\begin{tab2} MS/PhD in Computer Science \> Fall 2018 - Present \end{tab2}
 \begin{itemize}
     \item Interests: Computer vision, graphics, machine learning
 \end{itemize}
@@ -27,8 +27,8 @@
 \blockskip
 
 \begin{tab1} University of Utah \> Salt Lake City, Utah \end{tab1}
-\begin{tab2} Honors Bachelor of Science in Physics \> Fall 2013 - Spring 2018 \end{tab2}
 
+\begin{tab2} Honors Bachelor of Science in Physics \> Fall 2013 - Spring 2018 \end{tab2}
 \begin{itemize}
     \item Magnum cum laude
     \item Minors: Computer science, mathematics
@@ -56,10 +56,7 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
     \item Exploring theory and applications of spiking neural networks.
 \end{itemize}
 
-\begin{tab2} Teaching Assistant \> Fall 2019 \end{tab2}
-\begin{itemize}
-    \item Course: CS 559 - Computer Graphics
-\end{itemize}
+\begin{tab2} Teaching Assistant - CS 559 Computer Graphics \> Fall 2019 \end{tab2}
 
 \begin{tab2} Graduate Research Assistant \> Fall 2018 - Spring 2019 \end{tab2}
 \begin{itemize}
