--- a/assets/resume_long.tex
+++ b/assets/resume_long.tex
@@ -18,8 +18,8 @@
 \section*{Education}
 
 \begin{tab1} University of Wisconsin-Madison \> Madison, Wisconsin \end{tab1}
-\begin{tab2} MS/PhD in Computer Science \> Fall 2018 - Present \end{tab2}
 
+\begin{tab2} MS/PhD in Computer Science \> Fall 2018 - Present \end{tab2}
 \begin{itemize}
     \item Interests: Computer vision, graphics, machine learning
 \end{itemize}
@@ -27,8 +27,8 @@
 \blockskip
 
 \begin{tab1} University of Utah \> Salt Lake City, Utah \end{tab1}
-\begin{tab2} Honors Bachelor of Science in Physics \> Fall 2013 - Spring 2018 \end{tab2}
 
+\begin{tab2} Honors Bachelor of Science in Physics \> Fall 2013 - Spring 2018 \end{tab2}
 \begin{itemize}
     \item Magnum cum laude
     \item Minors: Computer science, mathematics
@@ -104,28 +104,20 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 
 \begin{tab1} UW-Madison Computer Sciences \> Madison, Wisconsin \end{tab1}
 
-\begin{tab2} Teaching Assistant \> Fall 2019 \end{tab2}
-\begin{itemize}
-    \item Course: CS 559 - Computer Graphics
-\end{itemize}
+\begin{tab2} Teaching Assistant - CS 559 Computer Graphics \> Fall 2019 \end{tab2}
 
 \blockskip
 
 \begin{tab1} University of Utah School of Computing \> Salt Lake City, Utah \end{tab1}
-\begin{tab2} Teaching Assistant \> Fall 2017 \end{tab2}
-\begin{itemize}
-    \item Course: CS 2100 - Discrete Mathematics
-\end{itemize}
 
+\begin{tab2} Teaching Assistant - CS 2100 Discrete Mathematics \> Fall 2017 \end{tab2}
 \blockskip
 
 \begin{tab1} University of Utah Physics \& Astronomy \> Salt Lake City, Utah \end{tab1}
 
-\begin{tab2} Teaching Assistant \> Fall 2016 - Spring 2017 \end{tab2}
-\begin{itemize}
-    \item Fall course: Physics 2010 - General Physics I
-    \item Spring course: Physics 2020 - General Physics II
-\end{itemize}
+\begin{tab2} Teaching Assistant - Physics 2020 General Physics II \> Spring 2017 \end{tab2}
+
+\begin{tab2} Teaching Assistant - Physics 2010 General Physics I \> Fall 2016 \end{tab2}
 
 \begin{tab2} Private Tutor \> Summer 2015 - Spring 2016 \end{tab2}
 \begin{itemize}
@@ -137,6 +129,7 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \section*{Volunteer Experience}
 
 \begin{tab1} UW-Madison Student ACM Chapter (SACM) \> Madison, Wisconsin \end{tab1}
+
 \begin{tab2} Event Committee Officer \> Spring 2019 \end{tab2}
 \begin{itemize}
     \item Responsible for planning and marketing CS student events.
@@ -145,6 +138,7 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \blockskip
 
 \begin{tab1} Lowell Elementary School \> Madison, Wisconsin \end{tab1}
+
 \begin{tab2} CS Club Leader \> Fall 2018 \end{tab2}
 \begin{itemize}
     \item Coached 4\textsuperscript{th} and 5\textsuperscript{th} graders in Scratch programming and computational thinking.
@@ -154,6 +148,7 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \blockskip
 
 \begin{tab1} Salt Lake Valley Science and Engineering Fair \> Salt Lake City, Utah \end{tab1}
+
 \begin{tab2} Elementary Division Judge \> Spring 2016, Spring 2017 \end{tab2}
 \begin{itemize}
     \item Evaluated projects at a regional science fair for K-12 students.
@@ -163,6 +158,7 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \blockskip
 
 \begin{tab1} University of Utah College of Science \> Salt Lake City, Utah \end{tab1}
+
 \begin{tab2} Science Day Volunteer \> Fall 2015, Fall 2016 \end{tab2}
 \begin{itemize}
     \item Offered logistical support at an annual outreach event for high school students.
