Resume formatting tweaks

--- a/assets/resume_long.tex
+++ b/assets/resume_long.tex
@@ -1,11 +1,9 @@
 \input{resume_preamble}
 
-
 \begin{document}
 
 \setfont
 \pagestyle{empty}
-
 
 \begin{center}
     {\LARGE \bfseries Matthew Dutson}\\
@@ -13,7 +11,6 @@
     mdutson.net\\
     (435) 720-1369 \enspace dutson@wisc.edu
 \end{center}
-
 
 \section*{Education}
 
@@ -35,15 +32,13 @@
     \item Thesis: Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering
 \end{itemize}
 
-
 \section*{Coursework and Languages}
 
-\begin{tabular}{ @{} p{1.75in} p{5.5in} }
+\begin{tabular}{ @{} p{1.75in} p{5in} }
 Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, linear algebra, statistics, differential equations \\
 Most experience & C++, Python, Java, Rust \\
 Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \end{tabular}
-
 
 \section*{Work Experience}
 
@@ -99,34 +94,27 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
     \item Built a C++ computer vision application for detecting equipment malfunctions.
 \end{itemize}
 
-
-\section*{Teaching Experience}
+\section*{Teaching Assistantships}
 
 \begin{tab1} UW-Madison Computer Sciences \> Madison, Wisconsin \end{tab1}
 
-\begin{tab2} Teaching Assistant - CS 559 Computer Graphics \> Fall 2019 \end{tab2}
+\begin{tab2} CS 559 - Computer Graphics \> Fall 2019 \end{tab2}
 
 \blockskip
 
 \begin{tab1} University of Utah School of Computing \> Salt Lake City, Utah \end{tab1}
 
-\begin{tab2} Teaching Assistant - CS 2100 Discrete Mathematics \> Fall 2017 \end{tab2}
+\begin{tab2} CS 2100 - Discrete Mathematics \> Fall 2017 \end{tab2}
+
 \blockskip
 
 \begin{tab1} University of Utah Physics \& Astronomy \> Salt Lake City, Utah \end{tab1}
 
-\begin{tab2} Teaching Assistant - Physics 2020 General Physics II \> Spring 2017 \end{tab2}
+\begin{tab2} Physics 2020 - General Physics II \> Spring 2017 \end{tab2}
 
-\begin{tab2} Teaching Assistant - Physics 2010 General Physics I \> Fall 2016 \end{tab2}
+\begin{tab2} Physics 2010 - General Physics I \> Fall 2016 \end{tab2}
 
-\begin{tab2} Private Tutor \> Summer 2015 - Spring 2016 \end{tab2}
-\begin{itemize}
-    \item Courses: College Algebra I, General Physics I \& II, Physics for Scientists I \& II, Introduction to Quantum Mechanics and Relativity
-    \item Tutored 2-3 students each semester.
-\end{itemize}
-
-
-\section*{Volunteer Experience}
+\section*{Other Experience}
 
 \begin{tab1} UW-Madison Student ACM Chapter (SACM) \> Madison, Wisconsin \end{tab1}
 
@@ -162,6 +150,12 @@ Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
 \begin{tab2} Science Day Volunteer \> Fall 2015, Fall 2016 \end{tab2}
 \begin{itemize}
     \item Offered logistical support at an annual outreach event for high school students.
+\end{itemize}
+
+\begin{tab2} Private Tutor \> Summer 2015 - Spring 2016 \end{tab2}
+\begin{itemize}
+    \item Courses: College Algebra I, General Physics I \& II, Physics for Scientists I \& II, Introduction to Quantum Mechanics and Relativity
+    \item Tutored 2-3 students each semester.
 \end{itemize}
 
 \end{document}
