--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -32,12 +32,12 @@
     \item Thesis: Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering
 \end{itemize}
 
-\section*{Coursework and Languages}
+\section*{Coursework and Technologies}
 
 \begin{tabular}{ @{} p{1.75in} p{5in} }
-Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, linear algebra, statistics, differential equations \\
-Most experience & C++, Python, Java, Rust \\
-Some experience & C, C\#, Perl, JavaScript, LaTeX, Linux/UNIX
+Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, high performance computing, linear algebra, statistics, differential equations \\
+Most experience & Python, C++, Java, Rust, UNIX, Git, NumPy, TensorFlow \\
+Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, PyTorch
 \end{tabular}
 
 \section*{Work Experience}
