--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -6,10 +6,10 @@
 \pagestyle{empty}
 
 \begin{center}
-    {\LARGE \bfseries Matthew Dutson}\\
+    {\LARGE \bfseries Matthew Dutson} \\
     \medskip
-    mdutson.net\\
-    (435) 720-1369 \enspace dutson@wisc.edu
+    mdutson.net \\
+    (608) 440-4434 \enspace dutson@wisc.edu
 \end{center}
 
 \section*{Education}
@@ -35,9 +35,9 @@
 \section*{Coursework and Technologies}
 
 \begin{tabular}{ @{} p{1.75in} p{5in} }
-Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, high performance computing, linear algebra, statistics, differential equations \\
+Selected coursework & Machine learning, computer vision, computer graphics, nonlinear optimization, algorithms, scientific computing, high performance computing, linear algebra, statistics, differential equations \\
 Most experience & Python, C++, Java, Rust, UNIX, Git, NumPy, TensorFlow \\
-Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, PyTorch
+Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, OpenMP, MPI, PyTorch
 \end{tabular}
 
 \section*{Work Experience}
