--- a/assets/resume_long.tex
+++ b/assets/resume_long.tex
@@ -1,15 +1,20 @@
 \input{resume_preamble}
 
+\usepackage{bibentry}
+
 \begin{document}
+
+\nobibliography{publications}
+\bibliographystyle{acm}
 
 \setfont
 \pagestyle{empty}
 
 \begin{center}
-    {\LARGE \bfseries Matthew Dutson}\\
+    {\LARGE \bfseries Matthew Dutson} \\
     \medskip
-    mdutson.net\\
-    (435) 720-1369 \enspace dutson@wisc.edu
+    mdutson.net \\
+    (608) 440-4434 \enspace dutson@wisc.edu
 \end{center}
 
 \section*{Education}
@@ -32,12 +37,16 @@
     \item Thesis: Reconstruction of Cosmic Ray Geometry Using Cherenkov Backscattering
 \end{itemize}
 
+\section*{Publications}
+
+\bibentry{fibrillir_collagen_quantification}
+
 \section*{Coursework and Technologies}
 
 \begin{tabular}{ @{} p{1.75in} p{5in} }
-Selected coursework & Machine learning, optimization, computer graphics, algorithms, scientific computing, high performance computing, linear algebra, statistics, differential equations \\
+Selected coursework & Machine learning, computer vision, computer graphics, nonlinear optimization, algorithms, scientific computing, high performance computing, linear algebra, statistics, differential equations \\
 Most experience & Python, C++, Java, Rust, UNIX, Git, NumPy, TensorFlow \\
-Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, PyTorch
+Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, OpenMP, MPI, PyTorch
 \end{tabular}
 
 \section*{Work Experience}
@@ -118,10 +127,13 @@ Some experience & C, C\#, Perl, JavaScript, MATLAB, CUDA, PyTorch
 
 \begin{tab1} UW-Madison Student ACM Chapter (SACM) \> Madison, Wisconsin \end{tab1}
 
-\begin{tab2} Event Committee Officer \> Spring 2019 \end{tab2}
+\begin{tab2} Events Committee Chair \> Fall 2019 - Present \end{tab2}
 \begin{itemize}
-    \item Responsible for planning and marketing CS student events.
+    \item Coordinated volunteer efforts for department-wide, student-led events.
+    \item Worked with the CS department to plan the annual Prospective Student Welcome Weekend.
 \end{itemize}
+
+\begin{tab2} Events Committee Officer \> Spring 2019 \end{tab2}
 
 \blockskip
 
