--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -59,9 +59,9 @@
 
 \cvitem{Machine Learning}{\textbf{TensorFlow}, PyTorch}
 
-\cvitem{Scientific Computing}{\textbf{NumPy}, MATLAB}
+\cvitem{Scientific}{\textbf{NumPy}, MATLAB}
 
-\cvitem{High Performance Computing}{CUDA, MPI, OpenMP}
+\cvitem{High Performance}{CUDA, MPI, OpenMP}
 
 \cvitem{Other}{\textbf{Linux}, \textbf{UNIX}, Git, LaTeX}
 
