--- a/assets/cv.tex
+++ b/assets/cv.tex
@@ -17,7 +17,7 @@
 \name{Matt}{Dutson}
 \phone{(608) 440-4434}
 \email{dutson@wisc.edu}
-\homepage{mdutson.net}
+\homepage{mattdutson.net}
 
 % =============================================================================
 
